force-app/main/default/objects/ARF_Coolyz_Masks__c/ARF_Coolyz_Masks__c.object-meta.xml
<CustomObject>
    <label>ARF - Coolyz/Mask</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>ARF - Coolyz/Masks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARF - Coolyz/Masks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>