force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/Garment_Information__c.field-meta.xml
<CustomField>
    <fullName>Garment_Information__c</fullName>
    <label>Garment Information</label>
    <length>25</length>
    <type>Text</type>
</CustomField>