force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/Mask_Cooly_Size__c.field-meta.xml
<CustomField>
    <fullName>Mask_Cooly_Size__c</fullName>
    <label>Mask/Cooly Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>