force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Order</label>
    <referenceTo>portal_my_order__c</referenceTo>
    <relationshipLabel>ARF - Coolyz/Masks</relationshipLabel>
    <relationshipName>ARF_Coolyz_Masks</relationshipName>
    <type>Lookup</type>
</CustomField>