force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/Number_of_Inks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Inks__c</fullName>
    <label>Number of Inks?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>