force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/Summary_of_Mask_Cooly__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Mask_Cooly__c</fullName>
    <label>Summary of Mask/Cooly</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>