force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/What_color_inks__c.field-meta.xml
<CustomField>
    <fullName>What_color_inks__c</fullName>
    <label>What color inks?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>