force-app/main/default/objects/ARF_Coolyz_Masks__c/fields/What_type_of_Masks__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_Masks__c</fullName>
    <label>What type of Masks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooly</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Pleated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>